[tool.poetry]
name = "osm-graph"
version = "0.1.0"
description = ""
authors = ["alenrajsp <alen.rajsp@um.si>"]

[tool.poetry.dependencies]
python = "^3.9"
igraph = "^0.10.2"
numpy = "^1.23.4"
py2neo = "^2021.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

